fix: disable bootstrap dark mode

--- a/source/css/base/_variables.scss
+++ b/source/css/base/_variables.scss
@@ -66,6 +66,7 @@ $enable-validation-icons: false !default;
 $enable-negative-margins: false !default;
 $enable-deprecation-messages: true !default;
 $enable-important-utilities: true !default;
+$enable-dark-mode: false !default;
 
 $variable-prefix: "" !default;
 
